[package]
name = "hf_transfer"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hf_transfer"
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.25"
pyo3 = { version = "0.18.1", features = ["extension-module"] }
reqwest = "0.11"
tokio = { version = "1.26", features = ["rt", "rt-multi-thread", "fs"] }
